Updated to demo manipulation of data and response.

--- a/SignalRDemo/SignalRDemo/Pages/Index.cshtml
+++ b/SignalRDemo/SignalRDemo/Pages/Index.cshtml
@@ -4,10 +4,13 @@
     <div class="row">
         <div class="col-6">&nbsp;</div>
         <div class="col-6">
-            User..........<input type="text" id="userInput" />
+            intA...<input type="number" id="inputIntA" />
             <br />
-            Message...<input type="text" id="messageInput" />
-            <input type="button" id="sendButton" value="Send Message" />
+            intB...<input type="number" id="inputIntB" />
+            <br />
+            intC...<input type="number" id="inputIntC" />
+            <br />
+            <input type="button" id="sendButton" value="Send Integers" />
         </div>
     </div>
     <div class="row">
